[package]
name = "repr-viewer-wasm"
version = "0.1.0"
edition = "2024"
authors = ["akanevrc"]
license = "MIT"
description = "WebAssembly module for Number Representation Viewer"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.23.2"
half = { version = "2.6.0", features = ["bytemuck"] }
wasm-bindgen = "0.2.103"
